# Loggify-LLM

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
loggify_llm/: mongodb.py
loggify_llm/chat/: chat_openai.py  utils.py
